{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 44,
  "lineage": "37ef7407-cfbb-341a-416e-ed2eaae14748",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sprints_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e076d5c9e040974",
            "arn": "arn:aws:ec2:us-east-1:269053166710:instance/i-044be8b206399ac52",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044be8b206399ac52",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0076d078cd805542e",
            "private_dns": "ip-10-0-0-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.11",
            "public_ip": "44.192.73.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e350e085eb8904c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-044c01f3f744ed3a8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bcc14b6d10a988e",
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044c01f3f744ed3a8"
            ]
          },
          "dependencies": [
            "aws_security_group.sprints_sg",
            "aws_subnet.sprints_subnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sprints_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:internet-gateway/igw-034116bb5840dd69e",
            "id": "igw-034116bb5840dd69e",
            "owner_id": "269053166710",
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            },
            "vpc_id": "vpc-070390d7f0a9f75f0"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sprints_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:route-table/rtb-095aa180090a2c113",
            "id": "rtb-095aa180090a2c113",
            "owner_id": "269053166710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034116bb5840dd69e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            },
            "timeouts": null,
            "vpc_id": "vpc-070390d7f0a9f75f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sprints_gw",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sprints_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034b906f2feb45ebc",
            "route_table_id": "rtb-095aa180090a2c113",
            "subnet_id": "subnet-05bcc14b6d10a988e"
          },
          "dependencies": [
            "aws_internet_gateway.sprints_gw",
            "aws_route_table.sprints_rt",
            "aws_subnet.sprints_subnet",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sprints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:security-group/sg-044c01f3f744ed3a8",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044c01f3f744ed3a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "269053166710",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            },
            "timeouts": null,
            "vpc_id": "vpc-070390d7f0a9f75f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sprints_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:subnet/subnet-05bcc14b6d10a988e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bcc14b6d10a988e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269053166710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            },
            "vpc_id": "vpc-070390d7f0a9f75f0"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sprints_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:vpc/vpc-070390d7f0a9f75f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027c4705eeefe5878",
            "default_route_table_id": "rtb-047febaa95f58df3c",
            "default_security_group_id": "sg-0a4d4d2d580b17c6a",
            "dhcp_options_id": "dopt-0cefdc5804d48e332",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070390d7f0a9f75f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047febaa95f58df3c",
            "owner_id": "269053166710",
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            }
          }
        }
      ]
    }
  ]
}